--- a/00_Assignments/ps01.ipynb
+++ b/00_Assignments/ps01.ipynb
@@ -5,20 +5,18 @@
    "metadata": {},
    "source": [
     "# PS01\n",
+    "Name: <YOUR NAME HERE>   \n",
+    "Collaborators:\n",
+    " - <Collaborator 1>\n",
+    " - <Collaborator 2>\n",
     "\n",
-    "DS256, Gettysburg College\n",
-    "\n",
-    "Prof Eatai Roth\n",
-    "\n",
-    "Due: Wed, Feb 4, 2026 at 1:10p\n",
-    "\n",
+    "DS256, Gettysburg College  \n",
+    "Prof Eatai Roth  \n",
+    "**Due: Wed, Feb 4, 2026 at 1:10p**\n",
     "\n",
     "## Instructions\n",
     " - Write your code in the cells labeled '''your code here'''.\n",
-    "\n",
-    " - The questions are in no particular order in terms of difficulty, so if you feel stuck, skip the question and come back to it.\n",
-    "\n",
-    " - You'll need to run the cell below to install the otter-grader package. You'll only need to do this once, but there's no harm in running the cell multiple times."
+    " - The questions are in no particular order in terms of difficulty, so if you feel stuck, skip the question and come back to it."
    ]
   },
   {
@@ -36,9 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'your code here'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''your code here'''"
    ]
@@ -52,10 +61,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hi there!\n"
+     "ename": "NameError",
+     "evalue": "name 'hi_there' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# If you see the friendly message below this cell, you've done it correctly.\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mhi_there\u001b[49m()\n",
+      "\u001b[31mNameError\u001b[39m: name 'hi_there' is not defined"
      ]
     }
    ],
@@ -80,7 +93,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''your code here'''"
+    "'''your code here'''\n",
+    "def last_name_first( ):\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -92,13 +108,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Roth, Eatai\n",
+      "Roth, ?\n",
+      "?, ?\n"
+     ]
+    }
+   ],
    "source": [
-    "print(last_name_first('Eatai', 'Roth')) # should print 'Roth, Eatai'\n",
-    "print(last_name_first(None, 'Roth')) # should print 'Roth, ?'\n",
-    "print(last_name_first()) # should print '?, ?'\n"
+    "last_name_first('Eatai', 'Roth') # should print 'Roth, Eatai'\n",
+    "last_name_first(last = 'Roth') # should print 'Roth, ?'\n",
+    "last_name_first() # should print '?, ?'\n"
    ]
   },
   {
@@ -267,7 +293,7 @@
     "editable": false
    },
    "source": [
-    "**8.** Write the function ```check_square``` that takes two numbers as inputs. If the second number is the first number squared, return True, otherwise False."
+    "**8.** Write the function ```how_many_can_i_buy``` that takes two numbers as inputs, ```cost_per_item``` and ```wallet```. The function should return how many of the item you could buy and how much change you would get, in that order."
    ]
   },
   {
