--- a/01_Intro/07_dictionaries.ipynb
+++ b/01_Intro/07_dictionaries.ipynb
@@ -33,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5dee1dc1-8780-4f33-b687-45055cbbfb0b",
    "metadata": {},
    "outputs": [],
    "source": [
     "student_a = dict(first = 'Eatai',\n",
-    "               last = 'Roth',\n",
-    "               id = 1112222,\n",
-    "               major = 'undeclared',\n",
-    "               minor = 'Data Science')\n",
+    "                 last = 'Roth',\n",
+    "                 id = 1112222,\n",
+    "                 major = 'undeclared',\n",
+    "                 minor = 'Data Science')\n",
     "\n",
     "student_b = {'first':'Eatai',\n",
     "           'last':'Roth',\n",
@@ -61,26 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "58c8b17e-46ba-4e02-942b-2b4ecac06873",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4dab02b-10ef-42c9-bfa5-2549ce6487b6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'first': 'Prof',\n",
-       " 'last': 'Roth',\n",
-       " 'id': 1112222,\n",
-       " 'major': 'undeclared',\n",
-       " 'minor': 'Data Science'}"
+       "True"
       ]
      },
      "execution_count": 4,
@@ -88,11 +76,34 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "student_a == student_b"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "b4dab02b-10ef-42c9-bfa5-2549ce6487b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Eatai'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student_a['first']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "67fdbece-44ec-4f2f-90c4-216156a738cc",
    "metadata": {},
    "outputs": [
@@ -101,10 +112,10 @@
      "evalue": "'ssn'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mstudent_a\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mssn\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'ssn'"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mstudent_a\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mssn\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[31mKeyError\u001b[39m: 'ssn'"
      ]
     }
    ],
@@ -122,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8c76d6cc-a68d-4221-9b2f-a141fc245641",
    "metadata": {},
    "outputs": [
@@ -132,7 +143,7 @@
        "dict_keys(['first', 'last', 'id', 'major', 'minor'])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,15 +183,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "61b4bbfa-fcfa-4ef7-b519-8e20c8acc6a1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if 'ssn' in student_a.keys():\n",
+    "    student_a['ssn']\n",
+    "else:\n",
+    "    student_a['ssn'] = 111111111"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "8cb82572-f775-4866-aca2-c44498079ecb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'first': 'Eatai',\n",
+       " 'last': 'Roth',\n",
+       " 'id': 1112222,\n",
+       " 'major': 'undeclared',\n",
+       " 'minor': 'Data Science',\n",
+       " 'ssn': 111111111}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "b44dcb23-1e88-4439-bbbc-5df7fa6e4a7a",
    "metadata": {},
    "outputs": [],
@@ -233,11 +275,11 @@
    "id": "0671078a",
    "metadata": {},
    "source": [
-    "###Dictionaries in Functions\n",
+    "### Dictionaries in Functions\n",
     "\n",
     "Let's write a function that prints a student's contact information (name and email).\n",
     "\n",
-    "* A new tool*: f-strings\n",
+    "* *A new tool*: f-strings\n",
     "\n",
     "Like a string, but prepended by the letter f. You can insert variables in the string that will be interpreted and converted to strings.\n",
     "\n",
@@ -250,25 +292,79 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "1ef515cf-5fa4-4a39-aa31-58014124551a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Eatai! You are caller number 64. 63 customers ahead of you.\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Eatai'\n",
+    "wait = 64\n",
+    "print(f'Hello {name}! You are caller number {wait}. {wait-1} customers ahead of you.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "32a3e63e-fa7c-438c-91ff-0b11b942bff0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_a['email'] = 'eroth@gettysburg.edu'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "f28092a9-b2d4-41e0-84a4-99e35126b436",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"\\nLet's pass a dictionary to a function. \\nWhy would we use this?\\n\""
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Roth, Eatai -- (eroth@gettysburg.edu)\n"
+     ]
     }
    ],
    "source": [
-    "'''\n",
-    "Let's pass a dictionary to a function. \n",
-    "Why would we use this?\n",
-    "'''"
+    "def contact_info(student):\n",
+    "    \n",
+    "    last = student['last']\n",
+    "    first = student['first']\n",
+    "    email = student['email']\n",
+    "    \n",
+    "    print(f'{last}, {first} -- ({email})')\n",
+    "\n",
+    "def contact_info2(last, first, email):\n",
+    "    print(f'{last}, {first} -- ({email})')\n",
+    "\n",
+    "\n",
+    "contact_info(student_a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5afa361c-e6c0-4e53-9aff-ed5c34f4f346",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Roth, Eatai -- (eroth@gettysburg.edu)\n"
+     ]
+    }
+   ],
+   "source": [
+    "contact_info2('Roth', 'Eatai', 'eroth@gettysburg.edu')"
    ]
   },
   {
@@ -285,7 +381,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
+   "id": "f1d9a42c-a3c5-4eda-874a-98cda4211f6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'first': 'James', 'last': 'Jameson', 'email': 'jamesja01@gettysburg.edu'}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student_c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "260871cf-c88a-4aa2-bddb-2052188ce2e2",
    "metadata": {},
    "outputs": [
@@ -293,12 +410,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "James Jameson  can be reached at jamesja01@gettysburg.edu\n"
+      "Jameson, James -- (jamesja01@gettysburg.edu)\n"
      ]
     }
    ],
    "source": [
-    "contactInfo(**student_c)   # ** means unpack\n",
+    "contact_info2(**student_c)   # ** means unpack\n",
     "\n",
     "# same as contactInfo(first = 'James', last = 'Jameson', email = 'jamesja01@gettysburg.edu')"
    ]
@@ -313,23 +430,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "5c6f4b1f-6895-4f26-a829-303ac23b5c68",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "James Jameson  can be reached at jamesja01@gettysburg.edu\n"
+     "ename": "TypeError",
+     "evalue": "contact_info2() got an unexpected keyword argument 'id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcontact_info2\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mstudent_a\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: contact_info2() got an unexpected keyword argument 'id'"
      ]
     }
    ],
    "source": [
-    "def contactInfo(student):\n",
-    "        print(f'{student['first']} {student['last']}  can be reached at {student['email']}')\n",
-    "        \n",
-    "contactInfo(student_c)"
+    "contact_info2(**student_a)"
    ]
   },
   {
@@ -350,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "ec2d8bff-bdd9-4b8b-b0af-5d066ac7c391",
    "metadata": {},
    "outputs": [],
@@ -364,6 +482,33 @@
     "student_dict = {} #an empty dictionary\n",
     "for key in student_a.keys():\n",
     "    student_dict[key] = [s[key] if key in s.keys() else None for s in student_list ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "26d11569-61eb-46ac-add1-5bf7aed3d6e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'first': ['Eatai', 'Eatai', 'James'],\n",
+       " 'last': ['Roth', 'Roth', 'Jameson'],\n",
+       " 'id': [1112222, 1112222, None],\n",
+       " 'major': ['undeclared', 'undeclared', None],\n",
+       " 'minor': ['Data Science', 'Data Science', None],\n",
+       " 'ssn': [111111111, None, None],\n",
+       " 'email': ['eroth@gettysburg.edu', None, 'jamesja01@gettysburg.edu']}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student_dict"
    ]
   },
   {
@@ -424,7 +569,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datascience",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
