--- a/00_Assignments/ps03.ipynb
+++ b/00_Assignments/ps03.ipynb
@@ -21,9 +21,7 @@
     "\n",
     " \n",
     "\n",
-    "The questions are in no particular order in terms of difficulty, so if you feel stuck, skip the question and come back to it.\n",
-    "\n",
-    "You'll need to run the cell below to install the otter-grader package. You'll only need to do this once, but there's no harm in running the cell multiple times."
+    "The questions are in no particular order in terms of difficulty, so if you feel stuck, skip the question and come back to it."
    ]
   },
   {
